--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div id="grid"></div>
+    <input id="size-input" type="range" min="2" max="100"/>
+    <button id="submit-btn"></button>
 <script src="app.js"></script>
 </body>
 </html>
