Add clear button that converts all grid squares to original color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="grid"></div>
+    <button id="clear-btn">Clear</button>
     <p id="display-input">16 x 16</p>
     <input id="size-input" type="range" min="2" max="100"/>
 <script src="app.js"></script>
