Add basic styling

--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <title>etch-a-sketch</title>
 </head>
 <body>
-    <div id="grid"></div>
-    <button id="clear-btn">Clear</button>
-    <p id="display-input">16 x 16</p>
-    <input id="size-input" type="range" min="2" max="100"/>
+    <div>
+        <h1>Etch-A-Sketch</h1>
+    </div>
+    <div id="second">
+        <div id="other-stuff">
+            <button id="clear-btn">Clear</button>
+            <p id="display-input">16 x 16</p>
+            <input id="size-input" type="range" min="2" max="100"/>
+        </div>
+        <div id="grid"></div>
+        <div id="invisible-other-stuff">
+            <p>16 x 16 x 16 x 16 x 16</p>
+        </div>
+    </div>
 <script src="app.js"></script>
 </body>
 </html>
